<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ru.vsu.cs.zmaev.screens.AccountFragment"
    android:id="@+id/fragmentUserProfile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/onboarding_vp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/viewpager_background"
        android:backgroundTint="@color/primary"
        app:layout_constraintBottom_toTopOf="@+id/center"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/DefaultText"
        android:textColor="@color/white"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/center"
        android:text=""
        tools:text="Даниил" />

    <View
        android:id="@+id/center"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_marginTop="150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/result_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/half_margin"
        app:layout_constraintTop_toBottomOf="@id/center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="@string/categories_result"
            style="@style/DefaultText"
            android:textSize="30sp"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <TextView
            android:id="@+id/empty_result_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:text="Здесь пока что пусто"
            android:fontFamily="@font/comfortaa"
            android:visibility="gone"
            android:textColor="@color/question_text_color"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/profileImage" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/result_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:textSize="20sp"
            android:fontFamily="@font/comfortaa"
            android:textColor="@color/question_text_color"/>
    </LinearLayout>

    <Button
        android:id="@+id/leaverAccountButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5sp"
        android:contentDescription="@string/description"
        android:background="@drawable/rounded_corner"
        android:text="@string/leave_account"
        android:layout_margin="@dimen/default_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_ll"/>

</androidx.constraintlayout.widget.ConstraintLayout>

